<resources>
    <string name="app_name">Practica_final</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Login</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="email_txt">Email</string>
    <string name="password_txt">Contraseña</string>
    <string name="register_txt">Registrarse</string>
    <string name="register_title">Registrarse</string>
    <string name="txt_address">Dirección</string>
    <string name="txt_age">Edad</string>
    <string name="txt_name">Nombre</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_home">Productos</string>
    <string name="title_dashboard">Carrito</string>
    <string name="title_sing_out">Sing Out</string>
    <string name="title_notifications">Detalle</string>
    <string name="buy_txt">Comprar</string>
    <string name="show_detail_txt">Ver detalle</string>
    <string name="txt_price">549</string>
    <string name="txt_name_product">IPhone9</string>
</resources>