<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.practica_final.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_shoppingcat"
        android:name="com.example.practica_final.ui.products.ShoppingCartFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_shoppingcart" />

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.example.practica_final.ui.productdetail.ProductDetailFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_detail" />
</navigation>